[gd_scene load_steps=2 format=3 uid="uid://host_join_menu"]

[ext_resource type="Script" path="res://ui/HostJoinMenu.gd" id="1_script"]

[node name="HostJoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.12, 0.16, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150
offset_top = -150
offset_right = 150
offset_bottom = 150

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "- Or Join a Game -"
horizontal_alignment = 1

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/IPContainer"]
layout_mode = 2
text = "IP:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer/IPContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "IP Address"

[node name="PortContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="VBoxContainer/PortContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="VBoxContainer/PortContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "7777"
placeholder_text = "Port"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
